--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html>
-<body>
-  
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<style type="text/css">
+
+body {
+ margin-top: 0px;
+ margin-right: 0px;
+ margin-bottom: 0px;
+ margin-left: 0px;
+ background-color:#090909;
+}
+
+#container {
+
+		margin:auto;
+		position:absolute;
+		width:100%;
+		height:100%;
+		z-index:-10;
+}
+
 #rain {
 	z-index:-10;
 
 }
 
-<h2>HTML Image</h2>
 <img src="70_pine.jpg" alt="70_pine">
 
 </body>
