--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<style type="text/css">
-
-#rain {
-	z-index:-10;
-
-}
-
-<img src="70_pine.jpg" alt="70_pine">
+	
+<h1>This is heading 1</h1><img src="70_pine.jpg" alt="70_pine">
 
 </body>
 </html>
 
-<div>
-<div id="rain">
-<script type='text/javascript' src='http://m.free-codes.org/gh.php?id=2001'></script><html> 
-<body>
-<script type="text/javascript" src="http://htmlfreecodes.com/codes/rain.js"></script>
-</body><a target="_blank" href="http://scopewe.com/double-pipe-heat-exchanger-design-part-1/" style="text-decoration:none;bottom:0;left:25px;
-<div>
