--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	
-<h1>This is heading 1</h1><img src="70_pine.jpg" alt="70_pine">
+<h1>WILLY DINGLEHOPPER KARLEN</h1><img src="70_pine.jpg" alt="70_pine">
 
 </body>
 </html>
