--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 	
-<h1>WILLY DINGLEHOPPER KARLEN</h1><img src="70_pine.jpg" alt="70_pine">
 
+<body>
+  <h1>WILLY DINGLEHOPPER KARLEN</h1><img src="70_pine.jpg" alt="70_pine">
+  <h4>Arteeest</h4>
+  
+  skills:
+  <ul>
+    <li>
+      poop jokes
+    </li>
+    <li>
+      fart jokes
+    </li>
+    <li>
+      ... idk jerkin off?
+    </li>
+  </ul>
 </body>
 </html>
 
