--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	
 
 <body>
-  <h1>WILLY DINGLEHOPPER KARLEN</h1><img src="70_pine.jpg" alt="70_pine">
+  <h1>WILLY DINGLEHOPPER KARLEN</h1>
   <h4>Arteeest</h4>
   
   skills:
@@ -17,6 +17,8 @@
       ... idk jerkin off?
     </li>
   </ul>
+
+<img src="70_pine.jpg" alt="70_pine">
 </body>
 </html>
 
